LB-688 Google Login
localization and improvements

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1977,9 +1977,17 @@
 "places_map_title" = "";
 "map_location_detail_header" = "";
 "beeline_feature_cancel_TC" = "";
-"security_popup_body" = "";
-"security_popup_header" = "";
-"save_to_my_billo" = "";
-"save_to_my_billo_download" = "";
+"security_popup_body" = "الرجاء إدخال حقل 1 على الأقل لاستعادة حسابك بسهولة عندما نسيت كلمة المرور الخاصة بك";
+"security_popup_header" = "تعيين البريد الإلكتروني الاسترداد أو سؤال الأمان";
+"save_to_my_billo" = "حفظ في Billo";
+"save_to_my_billo_download" = "هل تريد تحميل Billo ملف -%@  - %@.zip ?";
 "on_boarding_btn_google_login" = "";
 "on_boarding_or" = "";
+"on_boarding_btn_apple_login" = "";
+"google_login_user_exists_body" = "";
+"settings_googe_apple_connect" = "";
+"settings_googe" = "";
+"settings_apple" = "";
+"settings_google_password_required" = "";
+"settings_google_apple_connect" = "";
+"settings_google" = "";
