--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2270,9 +2270,17 @@ Please check I have understood the intended command here*/
 "places_map_title" = "";
 "map_location_detail_header" = "";
 "beeline_feature_cancel_TC" = "";
-"security_popup_body" = "";
-"security_popup_header" = "";
-"save_to_my_billo" = "";
-"save_to_my_billo_download" = "";
+"security_popup_body" = "Veuillez saisir au moins 1 champ pour récupérer facilement votre compte lorsque vous avez oublié votre mot de passe";
+"security_popup_header" = "Définissez votre E-mail de Récupération ou Votre Question de Sécurité";
+"save_to_my_billo" = "Enregistrer dans Billo";
+"save_to_my_billo_download" = "Voulez-vous télécharger le fichier Billo - %@ - %@.zip?";
 "on_boarding_btn_google_login" = "";
 "on_boarding_or" = "";
+"on_boarding_btn_apple_login" = "";
+"google_login_user_exists_body" = "";
+"settings_googe_apple_connect" = "";
+"settings_googe" = "";
+"settings_apple" = "";
+"settings_google_password_required" = "";
+"settings_google_apple_connect" = "";
+"settings_google" = "";
