--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2008,9 +2008,17 @@
 "places_map_title" = "";
 "map_location_detail_header" = "";
 "beeline_feature_cancel_TC" = "";
-"security_popup_body" = "";
-"security_popup_header" = "";
-"save_to_my_billo" = "";
-"save_to_my_billo_download" = "";
+"security_popup_body" = "Ju lutemi vendosni të paktën 1 fushë në mënyrë që të mund të rikuperoni lehtësisht llogarinë tuaj në rast se harroni fjalëkalimin tuaj";
+"security_popup_header" = "Vendosni E-mailin tuaj të Rimëkëmbjes ose Pyetjen e Sigurisë";
+"save_to_my_billo" = "Ruaj Në Billo";
+"save_to_my_billo_download" = "A doni të shkarkoni skedarin Billo - %@ - %@.zip?";
 "on_boarding_btn_google_login" = "";
 "on_boarding_or" = "";
+"on_boarding_btn_apple_login" = "";
+"google_login_user_exists_body" = "";
+"settings_googe_apple_connect" = "";
+"settings_googe" = "";
+"settings_apple" = "";
+"settings_google_password_required" = "";
+"settings_google_apple_connect" = "";
+"settings_google" = "";
