--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1965,9 +1965,17 @@
 "places_map_title" = "";
 "map_location_detail_header" = "";
 "beeline_feature_cancel_TC" = "";
-"security_popup_body" = "";
-"security_popup_header" = "";
-"save_to_my_billo" = "";
-"save_to_my_billo_download" = "";
+"security_popup_body" = "Bitte geben Sie mindestens 1 Feld ein, um Ihr Konto einfach wiederherzustellen, wenn Sie Ihr Passwort vergessen haben";
+"security_popup_header" = "Legen Sie Ihre Wiederherstellungs-E-Mail oder Sicherheitsfrage fest";
+"save_to_my_billo" = "In Mein Billo Speichern";
+"save_to_my_billo_download" = "Möchten Sie Billo Datei herunterladen - %@ - %@.zip?";
 "on_boarding_btn_google_login" = "";
 "on_boarding_or" = "";
+"on_boarding_btn_apple_login" = "";
+"google_login_user_exists_body" = "";
+"settings_googe_apple_connect" = "";
+"settings_googe" = "";
+"settings_apple" = "";
+"settings_google_password_required" = "";
+"settings_google_apple_connect" = "";
+"settings_google" = "";
