--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1965,9 +1965,17 @@
 "places_map_title" = "";
 "map_location_detail_header" = "";
 "beeline_feature_cancel_TC" = "";
-"security_popup_body" = "";
-"security_popup_header" = "";
-"save_to_my_billo" = "";
-"save_to_my_billo_download" = "";
+"security_popup_body" = "Introduceți cel puțin 1 câmp pentru a vă recupera contul cu ușurință atunci când ați uitat parola";
+"security_popup_header" = "Setați E-Mailul de Recuperare sau Întrebarea de Securitate";
+"save_to_my_billo" = "Salvați în Billo";
+"save_to_my_billo_download" = "Doriți să descărcați fișierul Billo - %@ - %@.zip?";
 "on_boarding_btn_google_login" = "";
 "on_boarding_or" = "";
+"on_boarding_btn_apple_login" = "";
+"google_login_user_exists_body" = "";
+"settings_googe_apple_connect" = "";
+"settings_googe" = "";
+"settings_apple" = "";
+"settings_google_password_required" = "";
+"settings_google_apple_connect" = "";
+"settings_google" = "";
