--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1979,9 +1979,17 @@
 "places_map_title" = "";
 "map_location_detail_header" = "";
 "beeline_feature_cancel_TC" = "";
-"security_popup_body" = "";
-"security_popup_header" = "";
-"save_to_my_billo" = "";
-"save_to_my_billo_download" = "";
+"security_popup_body" = "Пожалуйста, заполните хотя бы 1 поле, для восстановления учетной записи, если вы забудете свой пароль";
+"security_popup_header" = "Укажите адрес Электронной Почты Восстановления или Секретный Вопрос";
+"save_to_my_billo" = "Сохранить в Billo";
+"save_to_my_billo_download" = "Вы хотите загрузить файл Billo  - %@ - %@.zip?";
 "on_boarding_btn_google_login" = "";
 "on_boarding_or" = "";
+"on_boarding_btn_apple_login" = "";
+"google_login_user_exists_body" = "";
+"settings_googe_apple_connect" = "";
+"settings_googe" = "";
+"settings_apple" = "";
+"settings_google_password_required" = "";
+"settings_google_apple_connect" = "";
+"settings_google" = "";
