LB-689 Google Login
new update password flow

--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2013,19 +2013,28 @@
 "save_to_my_lifebox_full_storage_title" = "iPhone Storage Full";
 "save_to_my_lifebox_full_storage_body" = "You can free up space on this iPhone by managing your storage in Settings.";
 "places_map_title" = "Map";
-"map_location_detail_header" = "Photos at this location";
+"map_location_detail_header" = "Photos at this Location";
 "beeline_feature_cancel_TC" = "";
 "security_popup_body" = "Please enter at least 1 field to recover your account easily when you forgot your password";
 "security_popup_header" = "Set Your Recovery E-mail or Security Question";
 "save_to_my_billo" = "Save to My Billo";
 "save_to_my_billo_download" = "Do you want to download billo - %@ - %@.zip file?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
+"on_boarding_btn_google_login" = "Sign in with Google";
+"on_boarding_or" = "or";
+"on_boarding_btn_apple_login" = "Sign in with Apple";
+"google_login_user_exists_body" = "An existing registered account is found with %@ e-mail, to connect Google Login ID with your existing lifebox account you must first enter your lifebox password.";
+"settings_googe_apple_connect" = "Login Options";
+"settings_googe" = "Login with Google ID";
+"settings_apple" = "Login with Apple ID";
+"settings_google_password_required" = "In order to turn off the Google ID Login, you must set a lifebox password first.";
+"settings_google_apple_connect" = "Login Options";
+"settings_google" = "Login with Google ID";
+"settings_change_password_google_warning" = "";
+"settings_change_password_apple_warning" = "";
+"settings_change_password_apple_google_warning" = "";
+"settings_googe_apple_set_password" = "";
+"settings_google_apple_mail_match_error" = "";
+"googe_apple_login_invalid_token" = "";
+"settings_google_apple_empty_mail_error" = "";
+"password_change_external_auth_required_error" = "";
+"password_change_forgot_password_required_error" = "";
