--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2284,3 +2284,12 @@ Please check I have understood the intended command here*/
 "settings_google_password_required" = "";
 "settings_google_apple_connect" = "";
 "settings_google" = "";
+"settings_change_password_google_warning" = "";
+"settings_change_password_apple_warning" = "";
+"settings_change_password_apple_google_warning" = "";
+"settings_googe_apple_set_password" = "";
+"settings_google_apple_mail_match_error" = "";
+"googe_apple_login_invalid_token" = "";
+"settings_google_apple_empty_mail_error" = "";
+"password_change_external_auth_required_error" = "";
+"password_change_forgot_password_required_error" = "";
