--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1984,20 +1984,29 @@
 "contact_sync_storage_fail_cont_button" = "Devam Et";
 "save_to_my_lifebox_full_storage_title" = "iPhone Saklama Alanı Dolu";
 "save_to_my_lifebox_full_storage_body" = "Saklama alanınızı Ayarlar'da yöneterek bu iPhone'da yer açabilirsiniz.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
+"places_map_title" = "Harita";
+"map_location_detail_header" = "Bu Konumdaki Fotoğraflar";
 "beeline_feature_cancel_TC" = "";
 "security_popup_body" = "Şifreni unutman halinde hesabını kolayca kurtarabilmek için lütfen en az 1 alanı gir";
 "security_popup_header" = "Kurtarma E-postanı ya da Güvenlik Sorunu Belirle";
 "save_to_my_billo" = "Billo'ya Kaydet";
 "save_to_my_billo_download" = "Billo - %@ - %@.zip dosyasını indirmek mi istiyorsunuz?";
-"on_boarding_btn_google_login" = "Google ile Bağlan";
+"on_boarding_btn_google_login" = "Google Hesabı ile Giriş";
 "on_boarding_or" = "veya";
-"on_boarding_btn_apple_login" = "Apple ile Bağlan";
-"google_login_user_exists_body" = "%@ mail adresi ile kayıtlı bir lifebox hesabı bulduk, güvenliğiniz için tek seferlik lifebox şifrenizi girmenizi rica ederiz.";
-"settings_googe_apple_connect" = "ID Eşleştirme";
-"settings_googe" = "Google Eşleştirme";
-"settings_apple" = "Apple Eşleştirme";
-"settings_google_password_required" = "Google bağlantınızı kapatabilmeniz için öncelikle lifebox şifresi belirlemeniz gerekiyor. ";
-"settings_google_apple_connect" = "ID Eşleştirme";
-"settings_google" = "Google Eşleştirme";
+"on_boarding_btn_apple_login" = "Apple Hesabı ile Giriş";
+"google_login_user_exists_body" = "%@ mail adresi ile kayıtlı bir lifebox hesabı bulunmaktadır. Google Hesabı ile Giriş yöntemini mevcut lifebox hesabına bağlamak için öncelikle lifebox şifreni girmelisin.";
+"settings_googe_apple_connect" = "Giriş Yöntemi";
+"settings_googe" = "Google Hesabı ile Giriş";
+"settings_apple" = "Apple Hesabı ile Giriş";
+"settings_google_password_required" = "Google Hesabı ile Giriş tercihini kapatabilmen için öncelikle lifebox şifresi belirlemen gerekiyor.";
+"settings_google_apple_connect" = "Giriş Yöntemi";
+"settings_google" = "Google Hesabı ile Giriş";
+"settings_change_password_google_warning" = "Şifreni değiştirebilmen için önce Google Login yapmalısın";
+"settings_change_password_apple_warning" = "Şifreni değiştirebilmen için önce Apple Login yapmalısın";
+"settings_change_password_apple_google_warning" = "Şifreni değiştirebilmen için önce Google veya Apple Login yapmalısın\n";
+"settings_googe_apple_set_password" = "Lifebox şifresi belirle";
+"settings_google_apple_mail_match_error" = "Profil e-postanız ile bağlamak istediğiniz epostanız aynı olmalıdır";
+"googe_apple_login_invalid_token" = "Geçersiz token, tekrar deneyin";
+"settings_google_apple_empty_mail_error" = "Profil mailinizi girmeniz gerekmektedir.";
+"password_change_external_auth_required_error" = "Şifre değiştirebilmek için bağlı hesaplar altından geçerli bir token almanız gerekmektedir";
+"password_change_forgot_password_required_error" = "Şifrenizi şifremi unuttum akışı üzerinden belirleyebilirsiniz";
