LB-185 Beeline Georgia
localizing

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1974,23 +1974,23 @@
 "contact_sync_storage_fail_cont_button" = "متابعة";
 "save_to_my_lifebox_full_storage_title" = "مساحة تخزين iPhone ممتلئة";
 "save_to_my_lifebox_full_storage_body" = "يمكنك تفريغ مساحة على جهاز iPhone هذا عن طريق إدارة مساحة التخزين الخاصة بك في الإعدادات.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
-"beeline_feature_cancel_TC" = "";
+"places_map_title" = "خريطة";
+"map_location_detail_header" = "صور في هذا المكان";
+"beeline_feature_cancel_TC" = "تسجيل الدخول باستخدام Google";
 "security_popup_body" = "الرجاء إدخال حقل 1 على الأقل لاستعادة حسابك بسهولة عندما نسيت كلمة المرور الخاصة بك";
 "security_popup_header" = "تعيين البريد الإلكتروني الاسترداد أو سؤال الأمان";
 "save_to_my_billo" = "حفظ في Billo";
 "save_to_my_billo_download" = "هل تريد تحميل Billo ملف -%@  - %@.zip ?";
 "on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
+"on_boarding_or" = "أو";
+"on_boarding_btn_apple_login" = "تسجيل الدخول باستخدام Apple";
+"google_login_user_exists_body" = "يوجد حساب lifebox مسجل بعنوان البريد الإلكتروني%@. لتوصيل طريقة تسجيل الدخول إلى حساب Google بحساب lifebox الحالي ، يجب عليك أولاً إدخال كلمة مرور lifebox الخاصة بك.";
+"settings_googe_apple_connect" = "خيارات تسجيل الدخول";
+"settings_googe" = "تسجيل الدخول باستخدام Google";
+"settings_apple" = "تسجيل الدخول باستخدام Apple";
+"settings_google_password_required" = "لإيقاف تفضيل تسجيل الدخول باستخدام حساب Google ، يجب عليك أولاً تعيين كلمة مرور lifebox.";
+"settings_google_apple_connect" = "خيارات تسجيل الدخول";
+"settings_google" = "تسجيل الدخول باستخدام Google";
 "settings_change_password_google_warning" = "";
 "settings_change_password_apple_warning" = "";
 "settings_change_password_apple_google_warning" = "";
@@ -2000,3 +2000,9 @@
 "settings_google_apple_empty_mail_error" = "";
 "password_change_external_auth_required_error" = "";
 "password_change_forgot_password_required_error" = "";
+"kvkk_toggle_desc" = "";
+"kvkk_toggle_text" = "";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
