--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1962,23 +1962,23 @@
 "contact_sync_storage_fail_cont_button" = "Fortsetzen";
 "save_to_my_lifebox_full_storage_title" = "iPhone-Speicher Voll";
 "save_to_my_lifebox_full_storage_body" = "Sie können Speicherplatz auf diesem iPhone freigeben, indem Sie Ihren Speicherplatz in den Einstellungen verwalten.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
+"places_map_title" = "Karte";
+"map_location_detail_header" = "Fotos an Diesem Standort";
 "beeline_feature_cancel_TC" = "";
 "security_popup_body" = "Bitte geben Sie mindestens 1 Feld ein, um Ihr Konto einfach wiederherzustellen, wenn Sie Ihr Passwort vergessen haben";
 "security_popup_header" = "Legen Sie Ihre Wiederherstellungs-E-Mail oder Sicherheitsfrage fest";
 "save_to_my_billo" = "In Mein Billo Speichern";
 "save_to_my_billo_download" = "Möchten Sie Billo Datei herunterladen - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
+"on_boarding_btn_google_login" = "Anmeldung mit Google";
+"on_boarding_or" = "oder";
+"on_boarding_btn_apple_login" = "Anmeldung mit Apple";
+"google_login_user_exists_body" = "Unter der E-Mail-Adresse %@ ist ein lifebox-Konto registriert. Um Ihre Google-Login-ID mit einem bestehenden lifebox-Konto zu verknüpfen, müssen Sie zuerst Ihr lifebox-Passwort eingeben.";
+"settings_googe_apple_connect" = "Anmeldeoptionen";
+"settings_googe" = "Melden Sie sich mit der Google-ID an";
+"settings_apple" = "Melden Sie sich mit der Apple-ID an";
+"settings_google_password_required" = "Um die Google ID-Anmeldung zu deaktivieren, müssen Sie zuerst ein lifebox-Passwort festlegen.";
+"settings_google_apple_connect" = "Anmeldeoptionen";
+"settings_google" = "Melden Sie sich mit der Google-ID an";
 "settings_change_password_google_warning" = "";
 "settings_change_password_apple_warning" = "";
 "settings_change_password_apple_google_warning" = "";
@@ -1988,3 +1988,9 @@
 "settings_google_apple_empty_mail_error" = "";
 "password_change_external_auth_required_error" = "";
 "password_change_forgot_password_required_error" = "";
+"kvkk_toggle_desc" = "";
+"kvkk_toggle_text" = "";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
