--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1976,23 +1976,23 @@
 "contact_sync_storage_fail_cont_button" = "Далее";
 "save_to_my_lifebox_full_storage_title" = "Область Хранения iPhone Заполнена";
 "save_to_my_lifebox_full_storage_body" = "Вы можете освободить место на этом iPhone, управляя областью хранения в Настройках.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
+"places_map_title" = "Карта";
+"map_location_detail_header" = "Фотографии в Этом Месте";
 "beeline_feature_cancel_TC" = "";
 "security_popup_body" = "Пожалуйста, заполните хотя бы 1 поле, для восстановления учетной записи, если вы забудете свой пароль";
 "security_popup_header" = "Укажите адрес Электронной Почты Восстановления или Секретный Вопрос";
 "save_to_my_billo" = "Сохранить в Billo";
 "save_to_my_billo_download" = "Вы хотите загрузить файл Billo  - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
+"on_boarding_btn_google_login" = "Войти через Google";
+"on_boarding_or" = "или";
+"on_boarding_btn_apple_login" = "Войти через Apple";
+"google_login_user_exists_body" = "Имеется учетная запись lifebox, зарегистрированная на адрес электронной почты %@. Чтобы связать идентификатор входа Google с существующей учетной записью lifebox, вы должны сначала ввести свой пароль lifebox.";
+"settings_googe_apple_connect" = "Параметры Входа";
+"settings_googe" = "Войти с Учетной Записью Google";
+"settings_apple" = "Войти с Учетной Записью Apple";
+"settings_google_password_required" = "Чтобы отключить вход через Google ID, сначала необходимо установить пароль lifebox.";
+"settings_google_apple_connect" = "Параметры Входа";
+"settings_google" = "Войти с учетной записью Google";
 "settings_change_password_google_warning" = "";
 "settings_change_password_apple_warning" = "";
 "settings_change_password_apple_google_warning" = "";
@@ -2002,3 +2002,9 @@
 "settings_google_apple_empty_mail_error" = "";
 "password_change_external_auth_required_error" = "";
 "password_change_forgot_password_required_error" = "";
+"kvkk_toggle_desc" = "";
+"kvkk_toggle_text" = "";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
