--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1964,23 +1964,23 @@
 "contact_sync_storage_fail_cont_button" = "Продовжуй";
 "save_to_my_lifebox_full_storage_title" = "Пам'ять iPhone Повна";
 "save_to_my_lifebox_full_storage_body" = "Ви можете звільнити місце на цьому iPhone, керуючи зберіганням у Налаштуваннях.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
+"places_map_title" = "Мапа";
+"map_location_detail_header" = "Фотографії в Цьому Місці";
 "beeline_feature_cancel_TC" = "";
 "security_popup_body" = "Будь ласка, введіть принаймні 1 поле, щоб легко відновити свій обліковий запис, якщо ви забули свій пароль";
 "security_popup_header" = "Вкажіть адресу Електронної Пошти Відновлення або Секретне Питання";
 "save_to_my_billo" = "Зберегти в Billo";
 "save_to_my_billo_download" = "Ви хочете завантажити файл Billo - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
+"on_boarding_btn_google_login" = "Увійти Через Google";
+"on_boarding_or" = "або";
+"on_boarding_btn_apple_login" = "Увійти Через Apple";
+"google_login_user_exists_body" = "Є обліковий запис lifebox, зареєстрований на адресу електронної пошти %@. Щоб зв'язати ідентифікатор входу Google з наявним обліковим записом lifebox, ви повинні спочатку ввести пароль lifebox.";
+"settings_googe_apple_connect" = "Параметри Входу";
+"settings_googe" = "Увійти з Обліковим Записом Google";
+"settings_apple" = "Увійти з Обліковим Записом Apple";
+"settings_google_password_required" = "Щоб вимкнути вхід через Google ID, необхідно встановити пароль lifebox.";
+"settings_google_apple_connect" = "Параметри Входу";
+"settings_google" = "Увійти з Обліковим Записом Google";
 "settings_change_password_google_warning" = "";
 "settings_change_password_apple_warning" = "";
 "settings_change_password_apple_google_warning" = "";
@@ -1990,3 +1990,9 @@
 "settings_google_apple_empty_mail_error" = "";
 "password_change_external_auth_required_error" = "";
 "password_change_forgot_password_required_error" = "";
+"kvkk_toggle_desc" = "";
+"kvkk_toggle_text" = "";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
