--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2004,23 +2004,23 @@
 "contact_sync_storage_fail_cont_button" = "Continuar";
 "save_to_my_lifebox_full_storage_title" = "Almacenamiento De İphone Lleno";
 "save_to_my_lifebox_full_storage_body" = "Puede liberar espacio en este iPhone administrando su área de almacenamiento en Configuración.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
+"places_map_title" = "Mapa";
+"map_location_detail_header" = "Fotos en Esta Ubicación";
 "beeline_feature_cancel_TC" = "";
 "security_popup_body" = "Ingrese al menos 1 campo para recuperar su cuenta fácilmente cuando olvidó su contraseña";
 "security_popup_header" = "Configure su Correo electrónico de Recuperación o Pregunta de Seguridad";
 "save_to_my_billo" = "Guardar en Billo";
 "save_to_my_billo_download" = "Desea descargar el archivo Billo - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
+"on_boarding_btn_google_login" = "Inicia Sesión Con Google";
+"on_boarding_or" = "o";
+"on_boarding_btn_apple_login" = "Iniciar Sesión Con Apple";
+"google_login_user_exists_body" = "Se encuentra una cuenta registrada existente con %@ correo electrónico. Para conectar la ID de inicio de sesión de Google con su cuenta de lifebox existente, primero debe ingresar su contraseña de lifebox.";
+"settings_googe_apple_connect" = "Opciones de İnicio de Sesión";
+"settings_googe" = "Inicia Sesión Con Google";
+"settings_apple" = "Iniciar Sesión Con Apple";
+"settings_google_password_required" = "Para desactivar el inicio de sesión de ID de Google, primero debe establecer una contraseña de lifebox.";
+"settings_google_apple_connect" = "Opciones de İnicio de Sesión";
+"settings_google" = "Inicia Sesión Con Google";
 "settings_change_password_google_warning" = "";
 "settings_change_password_apple_warning" = "";
 "settings_change_password_apple_google_warning" = "";
@@ -2030,3 +2030,9 @@
 "settings_google_apple_empty_mail_error" = "";
 "password_change_external_auth_required_error" = "";
 "password_change_forgot_password_required_error" = "";
+"kvkk_toggle_desc" = "";
+"kvkk_toggle_text" = "";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
