--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2267,23 +2267,23 @@ Please check I have understood the intended command here*/
 "contact_sync_storage_fail_cont_button" = "Continuer";
 "save_to_my_lifebox_full_storage_title" = "Stockage Complet de l'iPhone";
 "save_to_my_lifebox_full_storage_body" = "Vous pouvez libérer de l'espace sur cet iPhone en gérant votre espace de stockage dans Paramètres.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
+"places_map_title" = "Carte";
+"map_location_detail_header" = "Photos à Cet Endroit";
 "beeline_feature_cancel_TC" = "";
 "security_popup_body" = "Veuillez saisir au moins 1 champ pour récupérer facilement votre compte lorsque vous avez oublié votre mot de passe";
 "security_popup_header" = "Définissez votre E-mail de Récupération ou Votre Question de Sécurité";
 "save_to_my_billo" = "Enregistrer dans Billo";
 "save_to_my_billo_download" = "Voulez-vous télécharger le fichier Billo - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
+"on_boarding_btn_google_login" = "Connectez-Vous Avec Google";
+"on_boarding_or" = "ou alors";
+"on_boarding_btn_apple_login" = "Connectez-Vous Avec Apple";
+"google_login_user_exists_body" = "Il existe un compte lifebox enregistré à l'adresse e-mail %@. Afin de lier votre identifiant de connexion Google à un compte lifebox existant, vous devez d'abord entrer votre mot de passe lifebox.";
+"settings_googe_apple_connect" = "Options de Connexion";
+"settings_googe" = "Connectez-Vous Avec Google";
+"settings_apple" = "Connectez-Vous Avec Apple";
+"settings_google_password_required" = "Pour désactiver Google ID Login, vous devez d'abord définir un mot de passe lifebox.";
+"settings_google_apple_connect" = "Options de Connexion";
+"settings_google" = "Connectez-Vous Avec Google";
 "settings_change_password_google_warning" = "";
 "settings_change_password_apple_warning" = "";
 "settings_change_password_apple_google_warning" = "";
@@ -2293,3 +2293,9 @@ Please check I have understood the intended command here*/
 "settings_google_apple_empty_mail_error" = "";
 "password_change_external_auth_required_error" = "";
 "password_change_forgot_password_required_error" = "";
+"kvkk_toggle_desc" = "";
+"kvkk_toggle_text" = "";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
