--- a/Depo/Depo/App/Resources/ka.lproj/InfoPlist.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/InfoPlist.strings
@@ -1,8 +1,8 @@
-NSFaceIDUsageDescription = "This app was designed to use Face ID to increase your safety";
-NSLocationAlwaysUsageDescription = "Your location will be used for background syncing and for organizing & searching your photos.";
-NSPhotoLibraryAddUsageDescription = "To show your photos&videos in the application and to back up them, lifebox needs your photo library access.";
-NSPhotoLibraryUsageDescription = "To show your photos&videos in the application and to back up them, lifebox needs your photo library access.";
-NSLocationAlwaysAndWhenInUseUsageDescription = "Your location will be used for background syncing and for organizing & searching your photos.";
-NSCameraUsageDescription = "To take pictures with your camera and to back up them to lifebox, your camera access permission is needed";
-NSContactsUsageDescription = "lifebox needs permission to access your contacts for providing phonebook suggestions during file sharing, and for contact back up feature to upload your contacts to lifebox servers to backup and manage them.";
-NSLocationWhenInUseUsageDescription = "Your location will be used for background syncing and for organizing & searching your photos.";
+NSFaceIDUsageDescription = "ეს აპლიკაცია შექმნილია იმისათვის, რომ გამოიყენოს Face ID შენი უსაფრთხოების გაზრდის მიზნით";
+NSLocationAlwaysUsageDescription = "შენს მდებარეობა გამოყენებული იქნება ფონური სინქრონიზაციისთვის და შენი ფოტოების ორგანიზებისა და ძიებისთვის.";
+NSPhotoLibraryAddUsageDescription = "შენი ფოტოებისა და ვიდეოების აპლიკაციაში საჩვენებლად და მათი სარეზერვო ასლის შესაქმნელად, lifebox-ი საჭიროებს შენს ფოტო ბიბლიოთეკაზე წვდომას.";
+NSPhotoLibraryUsageDescription = "შენი ფოტოებისა და ვიდეოების აპლიკაციაში საჩვენებლად და მათი სარეზერვო ასლის შესაქმნელად, lifebox-ი საჭიროებს შენს ფოტო ბიბლიოთეკაზე წვდომას.";
+NSLocationAlwaysAndWhenInUseUsageDescription = "შენი მდებარეობა გამოყენებული იქნება ფონური სინქრონიზაციისთვის და შენი ფოტოების ორგანიზებისა და ძიებისთვის.";
+NSCameraUsageDescription = "შენი კამერით სურათების გადასაღებად და მათი სარეზერვო ასლის შესაქმნელად საჭიროა შენს კამერაზე წვდომის ნებართვა";
+NSContactsUsageDescription = "lifebox საჭიროებს ნებართვას შენს კონტაქტებზე წვდომისთვის, რათა უზრუნველყოს ტელეფონის წიგნის შემოთავაზებები ფაილის გაზიარების დროს და კონტაქტების სარეზერვო ფუნქციისთვის, რათა ატვირთოს შენი კონტაქტები lifebox სერვერებზე, რათა შექმნა სარეზერვო და სამართავი.";
+NSLocationWhenInUseUsageDescription = "შენი მდებარეობა გამოყენებული იქნება ფონური სინქრონიზაციისთვის და შენი ფოტოების ორგანიზებისა და ძიებისთვის.";
