--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -1964,3 +1964,33 @@
 "save_to_my_lifebox_full_storage_body" = "";
 "places_map_title" = "";
 "map_location_detail_header" = "";
+"beeline_feature_cancel_TC" = "";
+"security_popup_body" = "";
+"security_popup_header" = "";
+"save_to_my_billo" = "";
+"save_to_my_billo_download" = "";
+"on_boarding_btn_google_login" = "";
+"on_boarding_or" = "";
+"on_boarding_btn_apple_login" = "";
+"google_login_user_exists_body" = "";
+"settings_googe_apple_connect" = "";
+"settings_googe" = "";
+"settings_apple" = "";
+"settings_google_password_required" = "";
+"settings_google_apple_connect" = "";
+"settings_google" = "";
+"settings_change_password_google_warning" = "";
+"settings_change_password_apple_warning" = "";
+"settings_change_password_apple_google_warning" = "";
+"settings_googe_apple_set_password" = "";
+"settings_google_apple_mail_match_error" = "";
+"googe_apple_login_invalid_token" = "";
+"settings_google_apple_empty_mail_error" = "";
+"password_change_external_auth_required_error" = "";
+"password_change_forgot_password_required_error" = "";
+"kvkk_toggle_desc" = "";
+"kvkk_toggle_text" = "";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
