--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1962,23 +1962,23 @@
 "contact_sync_storage_fail_cont_button" = "Continuă";
 "save_to_my_lifebox_full_storage_title" = "Stocare iPhone Plină";
 "save_to_my_lifebox_full_storage_body" = "Puteți elibera spațiu pe acest iPhone gestionând zona de stocare în Setări.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
+"places_map_title" = "Hartă";
+"map_location_detail_header" = "Fotografii în Acest Loc";
 "beeline_feature_cancel_TC" = "";
 "security_popup_body" = "Introduceți cel puțin 1 câmp pentru a vă recupera contul cu ușurință atunci când ați uitat parola";
 "security_popup_header" = "Setați E-Mailul de Recuperare sau Întrebarea de Securitate";
 "save_to_my_billo" = "Salvați în Billo";
 "save_to_my_billo_download" = "Doriți să descărcați fișierul Billo - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
+"on_boarding_btn_google_login" = "Conectați-vă cu Google";
+"on_boarding_or" = "sau";
+"on_boarding_btn_apple_login" = "Conectați-vă cu Apple";
+"google_login_user_exists_body" = "Există un cont lifebox înregistrat la adresa de e-mail %@. Pentru a conecta ID-ul dvs. de conectare Google la un cont lifebox existent, trebuie mai întâi să introduceți parola lifebox.";
+"settings_googe_apple_connect" = "Opțiuni de Conectare";
+"settings_googe" = "Conectați-vă cu Contul Google";
+"settings_apple" = "Conectați-vă cu un cont Apple";
+"settings_google_password_required" = "Pentru a dezactiva autentificarea ID-ului Google, mai întâi trebuie să setați o parolă lifebox.";
+"settings_google_apple_connect" = "Opțiuni de Conectare";
+"settings_google" = "Conectați-vă cu un cont Google";
 "settings_change_password_google_warning" = "";
 "settings_change_password_apple_warning" = "";
 "settings_change_password_apple_google_warning" = "";
@@ -1988,3 +1988,9 @@
 "settings_google_apple_empty_mail_error" = "";
 "password_change_external_auth_required_error" = "";
 "password_change_forgot_password_required_error" = "";
+"kvkk_toggle_desc" = "";
+"kvkk_toggle_text" = "";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
