--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2005,23 +2005,23 @@
 "contact_sync_storage_fail_cont_button" = "Vazhdoni";
 "save_to_my_lifebox_full_storage_title" = "Hapësira Ruajtëse e iPhone Është e Plotë";
 "save_to_my_lifebox_full_storage_body" = "Mund të lironi hapësirë në këtë iPhone duke menaxhuar zonën tuaj të ruajtjes te Cilësimet.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
+"places_map_title" = "Harta";
+"map_location_detail_header" = "Fotografitë Në Këtë Vendndodhje";
 "beeline_feature_cancel_TC" = "";
 "security_popup_body" = "Ju lutemi vendosni të paktën 1 fushë në mënyrë që të mund të rikuperoni lehtësisht llogarinë tuaj në rast se harroni fjalëkalimin tuaj";
 "security_popup_header" = "Vendosni E-mailin tuaj të Rimëkëmbjes ose Pyetjen e Sigurisë";
 "save_to_my_billo" = "Ruaj Në Billo";
 "save_to_my_billo_download" = "A doni të shkarkoni skedarin Billo - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
+"on_boarding_btn_google_login" = "Hyni me Google";
+"on_boarding_or" = "ose";
+"on_boarding_btn_apple_login" = "Hyni me Apple";
+"google_login_user_exists_body" = "Ekziston një llogari lifebox e regjistruar me adresën e emailit %@. Për të lidhur ID-në e hyrjes në Google me llogarinë tuaj ekzistuese lifebox, fillimisht duhet të vendosni fjalëkalimin tuaj lifebox.";
+"settings_googe_apple_connect" = "Opsionet e Hyrjes";
+"settings_googe" = "Identifikohu me Google ID";
+"settings_apple" = "Identifikohu me Apple ID";
+"settings_google_password_required" = "Për të çaktivizuar hyrjen në Google ID, duhet së pari të vendosni një fjalëkalim lifebox.";
+"settings_google_apple_connect" = "Opsionet e Hyrjes";
+"settings_google" = "Identifikohu me Google ID";
 "settings_change_password_google_warning" = "";
 "settings_change_password_apple_warning" = "";
 "settings_change_password_apple_google_warning" = "";
@@ -2031,3 +2031,9 @@
 "settings_google_apple_empty_mail_error" = "";
 "password_change_external_auth_required_error" = "";
 "password_change_forgot_password_required_error" = "";
+"kvkk_toggle_desc" = "";
+"kvkk_toggle_text" = "";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
