--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1984,11 +1984,9 @@
 "contact_sync_storage_fail_cont_button" = "Devam Et";
 "save_to_my_lifebox_full_storage_title" = "iPhone Saklama Alanı Dolu";
 "save_to_my_lifebox_full_storage_body" = "Saklama alanınızı Ayarlar'da yöneterek bu iPhone'da yer açabilirsiniz.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
 "places_map_title" = "Harita";
 "map_location_detail_header" = "Bu Konumdaki Fotoğraflar";
-"beeline_feature_cancel_TC" = "";
+"beeline_feature_cancel_TC" = "Beeline";
 "security_popup_body" = "Şifreni unutman halinde hesabını kolayca kurtarabilmek için lütfen en az 1 alanı gir";
 "security_popup_header" = "Kurtarma E-postanı ya da Güvenlik Sorunu Belirle";
 "save_to_my_billo" = "Billo'ya Kaydet";
@@ -2012,3 +2010,9 @@
 "settings_google_apple_empty_mail_error" = "Profil mailinizi girmeniz gerekmektedir.";
 "password_change_external_auth_required_error" = "Şifre değiştirebilmek için bağlı hesaplar altından geçerli bir token almanız gerekmektedir";
 "password_change_forgot_password_required_error" = "Şifrenizi şifremi unuttum akışı üzerinden belirleyebilirsiniz";
+"kvkk_toggle_desc" = "Kişisel Veri İşleme İzni";
+"kvkk_toggle_text" = "<p style=\"background: white; margin: 0in 0in 10.5pt 0in;\"><span lang=\"TR\" style=\"font-size: 11.5pt; font-family: 'Helvetica Neue'; color: #104142;\"> <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Lifecell Bulut &Ccedil;&ouml;z&uuml;mleri A.Ş., Lifecell Dijital Servisler ve &Ccedil;&ouml;z&uuml;mler A.Ş ve Grup Şirketleri </a> tarafından kişisel verilerimin işlenmesini ve <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> İzin Politikası </a> &rsquo;nda belirtilen taraflarla paylaşılmasına onay veriyorum. </span></p>";
+"security_popup_warning_header" = "Girmiş olduğun bilgilerden biri hatalı";
+"security_popup_warning_body1" = "Güvenlik sorun başarı ile kaydedildi, kurtarma e-postası için aşağıdaki hata alındı:";
+"security_popup_warning_body2" = "Kurtarma e-postası başarı ile kaydedildi, güvenlik sorun için aşağıdaki hata alındı:";
+"security_popup_warning_footer" = "Dilersen ayarlarsan kurtarma postasını tekrar girebilirsin.";
