LB-740 Kvkk Permission
switch added

--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1020,7 +1020,7 @@
 "create_story_pop_up_message" = "We are preparing your story. Once it is finished, you can access it from My Stories Album.";
 "create_story_path_to_story" = "Photos & Videos > My Stories";
 "You can not share empty album" = "You can not share empty album";
-"etk_permission_description" = "<p>I hereby give my consent to receive <u>commercial e-mail messages</u> in order to be informed about advantageous products and services of <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\">Lifecell Bulut &Ccedil;&ouml;z&uuml;mleri A.Ş., Lifecell Dijital Servisler ve &Ccedil;&ouml;z&uuml;mler A.Ş and&nbsp;Group Companies</a> unless and until I request otherwise pursuant to the Law No. 6563 and other applicable legislation.</p>";
+"etk_permission_description" = "I hereby give my consent to receive commercial e-mail messages in order to be informed about advantageous products and services of Lifecell Bulut Çözümleri A.Ş., Lifecell Dijital Servisler ve Çözümler A.Ş \n & Group Companies unless and until I request otherwise pursuant to the Law No. 6563 and other applicable legislation.";
 "global_permission_title_label" = "Global Data Permission";
 "global_permission_description" = "I consent my personal information to be shared with the cooperation operators by Turkcell in order for me to utilize the advantageous services of relevant operator regarding lifebox.";
 "terms_and_use_etk_checkbox_header" = "I have read and accept the text of Commercial Electronic Message and Data Consent.";
@@ -2029,12 +2029,19 @@
 "settings_google_password_required" = "In order to turn off the Google ID Login, you must set a lifebox password first.";
 "settings_google_apple_connect" = "Login Options";
 "settings_google" = "Login with Google ID";
-"settings_change_password_google_warning" = "";
-"settings_change_password_apple_warning" = "";
-"settings_change_password_apple_google_warning" = "";
+"settings_change_password_google_warning" = "In order to change your password, you must login to your lifebox account with your Google ID.";
+"settings_change_password_apple_warning" = "In order to change your password, you must login to your lifebox account with your Apple ID.";
+"settings_change_password_apple_google_warning" = "In order to change your password, you must login to your lifebox account with your Google ID or Apple ID.";
 "settings_googe_apple_set_password" = "";
-"settings_google_apple_mail_match_error" = "";
-"googe_apple_login_invalid_token" = "";
-"settings_google_apple_empty_mail_error" = "";
-"password_change_external_auth_required_error" = "";
-"password_change_forgot_password_required_error" = "";
+"settings_google_apple_mail_match_error" = "To connect your account to lifebox, your e-mail must be the same on each platform.";
+"googe_apple_login_invalid_token" = "Invalid login attempt, please check your login credential and try again.";
+"settings_google_apple_empty_mail_error" = "You have to add an email address to your account.";
+"password_change_external_auth_required_error" = "In order to change your password, you can either login to your lifebox account with your Google ID/Apple ID or follow the Forgot My Password instructions on the login screen.";
+"password_change_forgot_password_required_error" = "In order to change your password, you must logout from your account first and follow the Forgot My Password instructions on the login screen.";
+"kvkk_toggle_desc" = "Personal Data Protection Consent";
+"kvkk_toggle_text" = "<p>I hereby give my consent to allow <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Lifecell Bulut &Ccedil;&ouml;z&uuml;mleri A.Ş., Lifecell Dijital Servisler ve &Ccedil;&ouml;z&uuml;mler A.Ş ve Grup Şirketleri </a> to process my personal data and share them with the parties listed in the <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Permission Policy </a> .</p>";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
+"kvkk_firms_link" = "";
