--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1962,29 +1962,36 @@
 "contact_sync_storage_fail_cont_button" = "Continuă";
 "save_to_my_lifebox_full_storage_title" = "Stocare iPhone Plină";
 "save_to_my_lifebox_full_storage_body" = "Puteți elibera spațiu pe acest iPhone gestionând zona de stocare în Setări.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
-"beeline_feature_cancel_TC" = "";
+"places_map_title" = "Hartă";
+"map_location_detail_header" = "Fotografii în Acest Loc";
+"beeline_feature_cancel_TC" = "Beeline";
 "security_popup_body" = "Introduceți cel puțin 1 câmp pentru a vă recupera contul cu ușurință atunci când ați uitat parola";
 "security_popup_header" = "Setați E-Mailul de Recuperare sau Întrebarea de Securitate";
 "save_to_my_billo" = "Salvați în Billo";
 "save_to_my_billo_download" = "Doriți să descărcați fișierul Billo - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
-"settings_change_password_google_warning" = "";
-"settings_change_password_apple_warning" = "";
-"settings_change_password_apple_google_warning" = "";
-"settings_googe_apple_set_password" = "";
-"settings_google_apple_mail_match_error" = "";
-"googe_apple_login_invalid_token" = "";
-"settings_google_apple_empty_mail_error" = "";
-"password_change_external_auth_required_error" = "";
-"password_change_forgot_password_required_error" = "";
+"on_boarding_btn_google_login" = "Conectați-vă cu Google";
+"on_boarding_or" = "sau";
+"on_boarding_btn_apple_login" = "Conectați-vă cu Apple";
+"google_login_user_exists_body" = "Există un cont lifebox înregistrat la adresa de e-mail %@. Pentru a conecta ID-ul dvs. de conectare Google la un cont lifebox existent, trebuie mai întâi să introduceți parola lifebox.";
+"settings_googe_apple_connect" = "Opțiuni de Conectare";
+"settings_googe" = "Conectați-vă cu Contul Google";
+"settings_apple" = "Conectați-vă cu un cont Apple";
+"settings_google_password_required" = "Pentru a dezactiva autentificarea ID-ului Google, mai întâi trebuie să setați o parolă lifebox.";
+"settings_google_apple_connect" = "Opțiuni de Conectare";
+"settings_google" = "Conectați-vă cu un cont Google";
+"settings_change_password_google_warning" = "Pentru a vă schimba parola, trebuie să vă conectați la contul lifebox cu ID-ul dvs. Google.";
+"settings_change_password_apple_warning" = "Pentru a vă schimba parola, trebuie să vă conectați la lifebox folosind ID-ul Apple.";
+"settings_change_password_apple_google_warning" = "Pentru a vă schimba parola, trebuie să vă conectați la lifebox cu ID-ul dvs. Google sau ID-ul Apple.";
+"settings_googe_apple_set_password" = "Setați parola pentru lifebox";
+"settings_google_apple_mail_match_error" = "Pentru a vă conecta contul la lifebox, adresa dvs. de e-mail trebuie să fie aceeași pe fiecare platformă.";
+"googe_apple_login_invalid_token" = "Încercare de conectare nevalidă, vă rugăm să vă verificați acreditările și să încercați din nou.";
+"settings_google_apple_empty_mail_error" = "Trebuie să adăugați o adresă de e-mail în contul dvs.";
+"password_change_external_auth_required_error" = "Pentru a vă schimba parola, puteți fie să vă conectați la contul lifebox folosind ID-ul Google/ID-ul Apple, fie să urmați instrucțiunile privind parola uitată de pe ecranul de conectare.";
+"password_change_forgot_password_required_error" = "Pentru a vă schimba parola, trebuie mai întâi să vă deconectați din cont și să urmați instrucțiunile „Parola Uitată” de pe ecranul de conectare.";
+"kvkk_toggle_desc" = "Consimțământ Pentru Prelucrarea Datelor Cu Caracter Personal";
+"kvkk_toggle_text" = "<p style=\"background: white; margin: 0in 0in 10.5pt 0in;\"><span lang=\"TR\" style=\"font-size: 11.5pt; font-family: 'Helvetica Neue'; color: #104142;\"> <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Lifecell Bulut Çözümleri A.Ş., Lifecell Dijital Servisler ve Çözümler A.Ş şi Grup Şirketleri </a> Sunt de acord cu prelucrarea datelor mele personale și transferul către părțile specificate în <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Politica de Permisiuni </a> . </span></p>";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
+"kvkk_firms_link" = "";
