--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2005,29 +2005,36 @@
 "contact_sync_storage_fail_cont_button" = "Vazhdoni";
 "save_to_my_lifebox_full_storage_title" = "Hapësira Ruajtëse e iPhone Është e Plotë";
 "save_to_my_lifebox_full_storage_body" = "Mund të lironi hapësirë në këtë iPhone duke menaxhuar zonën tuaj të ruajtjes te Cilësimet.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
-"beeline_feature_cancel_TC" = "";
+"places_map_title" = "Harta";
+"map_location_detail_header" = "Fotografitë Në Këtë Vendndodhje";
+"beeline_feature_cancel_TC" = "Beeline";
 "security_popup_body" = "Ju lutemi vendosni të paktën 1 fushë në mënyrë që të mund të rikuperoni lehtësisht llogarinë tuaj në rast se harroni fjalëkalimin tuaj";
 "security_popup_header" = "Vendosni E-mailin tuaj të Rimëkëmbjes ose Pyetjen e Sigurisë";
 "save_to_my_billo" = "Ruaj Në Billo";
 "save_to_my_billo_download" = "A doni të shkarkoni skedarin Billo - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
-"settings_change_password_google_warning" = "";
-"settings_change_password_apple_warning" = "";
-"settings_change_password_apple_google_warning" = "";
-"settings_googe_apple_set_password" = "";
-"settings_google_apple_mail_match_error" = "";
-"googe_apple_login_invalid_token" = "";
-"settings_google_apple_empty_mail_error" = "";
-"password_change_external_auth_required_error" = "";
-"password_change_forgot_password_required_error" = "";
+"on_boarding_btn_google_login" = "Hyni me Google";
+"on_boarding_or" = "ose";
+"on_boarding_btn_apple_login" = "Hyni me Apple";
+"google_login_user_exists_body" = "Ekziston një llogari lifebox e regjistruar me adresën e emailit %@. Për të lidhur ID-në e hyrjes në Google me llogarinë tuaj ekzistuese lifebox, fillimisht duhet të vendosni fjalëkalimin tuaj lifebox.";
+"settings_googe_apple_connect" = "Opsionet e Hyrjes";
+"settings_googe" = "Identifikohu me Google ID";
+"settings_apple" = "Identifikohu me Apple ID";
+"settings_google_password_required" = "Për të çaktivizuar hyrjen në Google ID, duhet së pari të vendosni një fjalëkalim lifebox.";
+"settings_google_apple_connect" = "Opsionet e Hyrjes";
+"settings_google" = "Identifikohu me Google ID";
+"settings_change_password_google_warning" = "Për të ndryshuar fjalëkalimin tuaj, duhet të identifikoheni në llogarinë tuaj të lifebox me ID-në tuaj të Google.";
+"settings_change_password_apple_warning" = "Për të ndryshuar fjalëkalimin tuaj, duhet të identifikoheni në lifebox duke përdorur Apple ID tuaj.";
+"settings_change_password_apple_google_warning" = "Për të ndryshuar fjalëkalimin tuaj, duhet të identifikoheni në lifebox me Google ID ose Apple ID.";
+"settings_googe_apple_set_password" = "Vendosni fjalëkalimin për lifebox";
+"settings_google_apple_mail_match_error" = "Për të lidhur llogarinë tuaj me lifebox, adresa juaj e emailit duhet të jetë e njëjtë në çdo platformë.";
+"googe_apple_login_invalid_token" = "Përpjekje e pavlefshme për hyrje, ju lutemi kontrolloni kredencialet tuaja dhe provoni përsëri.";
+"settings_google_apple_empty_mail_error" = "Duhet të shtoni një adresë emaili në llogarinë tuaj.";
+"password_change_external_auth_required_error" = "Për të ndryshuar fjalëkalimin tuaj, ose mund të identifikoheni në llogarinë tuaj lifebox duke përdorur ID-në tuaj të Google/Apple ID ose të ndiqni udhëzimet e fjalëkalimit të harruar në ekranin e identifikimit.";
+"password_change_forgot_password_required_error" = "Për të ndryshuar fjalëkalimin, fillimisht duhet të dilni nga llogaria juaj dhe të ndiqni udhëzimet \"Harrova Fjalëkalimin\" në ekranin e hyrjes.";
+"kvkk_toggle_desc" = "Pëlqimi për Përpunimin e të Dhënave Personale";
+"kvkk_toggle_text" = "<p style=\"background: white; margin: 0in 0in 10.5pt 0in;\"><span lang=\"TR\" style=\"font-size: 11.5pt; font-family: 'Helvetica Neue'; color: #104142;\"> <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Lifecell Bulut Çözümleri A.Ş., Lifecell Dijital Servisler ve Çözümler A.Ş ve Grup Şirketleri </a> Unë pranoj përpunimin e të dhënave të mia personale dhe transferimin te palët e specifikuara në <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Politikën e Lejes </a>. </span></p>";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
+"kvkk_firms_link" = "";
