--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1976,29 +1976,36 @@
 "contact_sync_storage_fail_cont_button" = "Далее";
 "save_to_my_lifebox_full_storage_title" = "Область Хранения iPhone Заполнена";
 "save_to_my_lifebox_full_storage_body" = "Вы можете освободить место на этом iPhone, управляя областью хранения в Настройках.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
-"beeline_feature_cancel_TC" = "";
+"places_map_title" = "Карта";
+"map_location_detail_header" = "Фотографии в Этом Месте";
+"beeline_feature_cancel_TC" = "Beeline";
 "security_popup_body" = "Пожалуйста, заполните хотя бы 1 поле, для восстановления учетной записи, если вы забудете свой пароль";
 "security_popup_header" = "Укажите адрес Электронной Почты Восстановления или Секретный Вопрос";
 "save_to_my_billo" = "Сохранить в Billo";
 "save_to_my_billo_download" = "Вы хотите загрузить файл Billo  - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
-"settings_change_password_google_warning" = "";
-"settings_change_password_apple_warning" = "";
-"settings_change_password_apple_google_warning" = "";
-"settings_googe_apple_set_password" = "";
-"settings_google_apple_mail_match_error" = "";
-"googe_apple_login_invalid_token" = "";
-"settings_google_apple_empty_mail_error" = "";
-"password_change_external_auth_required_error" = "";
-"password_change_forgot_password_required_error" = "";
+"on_boarding_btn_google_login" = "Войти через Google";
+"on_boarding_or" = "или";
+"on_boarding_btn_apple_login" = "Войти через Apple";
+"google_login_user_exists_body" = "Имеется учетная запись lifebox, зарегистрированная на адрес электронной почты %@. Чтобы связать идентификатор входа Google с существующей учетной записью lifebox, вы должны сначала ввести свой пароль lifebox.";
+"settings_googe_apple_connect" = "Параметры Входа";
+"settings_googe" = "Войти с Учетной Записью Google";
+"settings_apple" = "Войти с Учетной Записью Apple";
+"settings_google_password_required" = "Чтобы отключить вход через Google ID, сначала необходимо установить пароль lifebox.";
+"settings_google_apple_connect" = "Параметры Входа";
+"settings_google" = "Войти с учетной записью Google";
+"settings_change_password_google_warning" = "Чтобы изменить пароль, вы должны войти в свою учетную запись lifebox с помощью своего Google ID.";
+"settings_change_password_apple_warning" = "Чтобы изменить пароль, вы должны войти в lifebox, используя свой Apple ID.";
+"settings_change_password_apple_google_warning" = "Чтобы изменить пароль, вам необходимо войти в lifebox с помощью своего Google ID или Apple ID.";
+"settings_googe_apple_set_password" = "Установить пароль для lifebox";
+"settings_google_apple_mail_match_error" = "Для подключения вашей учетной записи к lifebox ваш адрес электронной почты должен быть одинаковым на каждой платформе.";
+"googe_apple_login_invalid_token" = "Неверная попытка входа в систему, проверьте свои учетные данные и повторите попытку.";
+"settings_google_apple_empty_mail_error" = "Вы должны добавить адрес электронной почты в свою учетную запись.";
+"password_change_external_auth_required_error" = "Чтобы изменить свой пароль, вы можете либо войти в свою учетную запись lifebox, используя свой идентификатор Google ID/Apple ID, либо следовать инструкциям по забытому паролю на экране входа в систему.";
+"password_change_forgot_password_required_error" = "Чтобы изменить свой пароль, вы должны сначала выйти из своей учетной записи и следовать инструкциям «Забыл Пароль» на экране входа в систему.";
+"kvkk_toggle_desc" = "Согласие на Обработку Персональных Данных";
+"kvkk_toggle_text" = "<p style=\"background: white; margin: 0in 0in 10.5pt 0in;\"><span lang=\"TR\" style=\"font-size: 11.5pt; font-family: 'Helvetica Neue'; color: #104142;\"> <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Lifecell Bulut Çözümleri A.Ş., Lifecell Dijital Servisler ve Çözümler A.Ş  ve Grup Şirketleri </a> Я даю согласие на обработку моих персональных данных и передачу их сторонам, указанным в <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Политика Разрешений </a>. </span></p>";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
+"kvkk_firms_link" = "";
